--- a/style.css
+++ b/style.css
@@ -28,6 +28,10 @@ body{
     .box img{
         max-width: 65vw !important;
     }
+
+    .login-signup{
+        width: 25rem !important;
+    }
 }
 
 @media only screen and (min-width: 601px) and (max-width: 992px) {
@@ -59,6 +63,10 @@ body{
         text-align: center;
         max-width: 34vw !important;
         margin-left: 15px;
+    }
+
+    .login-signup{
+        width: 30rem !important;
     }
 }
 
